@@ -122,7 +122,7 @@ namespace {
     // [                   -1  2]
     const int N = NodeTest::N;
     if (N<2) return;
-    RCP<GRPH> G = rcp(new GRPH (N,node,null) );
+    RCP<GRPH> G = rcp(new GRPH (N,N,node,null) );
     RCP<MAT>  A = rcp(new MAT  (G,null) );
     // allocate data for ptrs, indices and values
     const Ordinal totalNNZ = 3*N - 2;
